--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,3 +5,18 @@ body {
 .container {
     border: 1px solid red;
 }
+
+.bg-image { 
+    width: 100%; 
+    height: 600px; 
+    background-image: url('https://loremflickr.com/1920/1080/brazil'); 
+    background-size: contain;  
+    background-repeat: no-repeat;
+}
+
+#img-text {
+    color: aliceblue;
+    text-shadow: 2px 2px #000;
+
+    padding-top: 20%;
+}
