Updates of the day 07.11.2023

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,11 @@ body {
     font-size: 14px;
     outline: 0;
 }
+
+.error {
+    font: 11;
+    background-color: #ff0000;
+    color: #fff;
+    padding: 4px;
+    border-radius: 5px;
+}
