Updates of the day 07.11.2023

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,9 +34,9 @@ body {
 }
 
 .error {
-    font: 11;
+    font-size: 11;
     background-color: #ff0000;
     color: #fff;
-    padding: 4px;
+    padding: 0.5px;
     border-radius: 5px;
 }
